--- a/src/main/resources/templates/save.html
+++ b/src/main/resources/templates/save.html
@@ -5,6 +5,17 @@
     <title>save</title>
 </head>
 <body>
-
+<a href="/">이전</a>
+<br>
+<form action="/member/save" method="post">
+    이메일: <input type="text" name="memberEmail"> <br>
+    비밀번호: <input type="password" name="memberPassword"> <br>
+    이름: <input type="text" name="memberName"> <br>
+    성별 <br>
+    <input type="radio" name="gender" value= "man" checked/>남자
+    <input type="radio" name="gender" value= "woman" />여자 <br>
+    전화번호: <input type="text" name="phoneNumber"> <br>
+    <input type="submit" value="회원가입" >
+</form>
 </body>
 </html>
