--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -44,7 +44,8 @@
 <script>
     const listReq = () => {
         console.log("목록 요청");
-        location.href = "/board/";
+        const page = [[${page}]];
+        location.href = "/board/paging?page="+page;
     }
     const updateReq = () => {
         console.log("수정 요청");
