--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -74,6 +74,9 @@
         console.log("작성자: ", writer);
         console.log("내용: ", contents);
         const id = [[${board.id}]];
+        /*
+
+         */
         $.ajax({
             // 요청방식: post, 요청주소: /comment/save, 요청데이터: 작성자, 작성내용, 게시글번호
             type: "post",
@@ -112,7 +115,7 @@
     const listReq = () => {
         console.log("목록 요청");
         const page = [[${page}]];
-        location.href = "/board/paging?page="+page;
+        location.href = "/board/";
     }
     const updateReq = () => {
         console.log("수정 요청");
