--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -8,7 +8,7 @@
 <form action="/board/update" method="post" name="updateForm">
     <input type="hidden" name="id" th:value="${boardUpdate.id}">
     writer: <input type="text" name="boardWriter" th:value="${boardUpdate.boardWriter}" readonly> <br>
-    pass: <input type="text" name="boardPass" id="boardPass"> <br>
+    pass: <input type="password" name="boardPass" id="boardPass"> <br>
     title: <input type="text" name="boardTitle" th:value="${boardUpdate.boardTitle}"> <br>
     contents: <textarea name="boardContents" cols="30" rows="10" th:text="${boardUpdate.boardContents}"></textarea> <br>
     <input type="hidden" name="boardHits" th:value="${boardUpdate.boardHits}">
